--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
-    "angular-xeditable": "~0.1.8"
+    "angular-xeditable": "~0.1.8",
+    "checklist-model": "~0.1.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
