--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
     "angular-xeditable": "~0.1.8",
-    "checklist-model": "~0.1.3"
+    "checklist-model": "~0.1.3",
+    "angular-material": "~0.6.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
