--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-ui-router": "~0.2.10",
     "angular-xeditable": "~0.1.8",
     "checklist-model": "~0.1.3",
-    "angular-material": "~0.6.1"
+    "angular-material": "~0.6.1",
+    "stripe-angular": "~1.0.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
