--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-xeditable": "~0.1.8",
     "checklist-model": "~0.1.3",
     "angular-material": "~0.6.1",
-    "stripe-angular": "~1.0.1"
+    "stripe-angular": "~1.0.1",
+    "angular-payments": "*"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
